--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>im learning git and im so psyched!!</h1>
+        <h2>editing from github platformm!</h2>
         Hello, World.
     </body>
 </html>
