added exclamation point, merge conflict

--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Basics</title>
     </head>
     <body>
-        <h1>im learning git and im so psyched!!</h1>
+        <h1>im learning git and im so psyched!!!</h1>
         <h2>editing from github platformm!</h2>
         Hello, World.
     </body>
