--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,14 @@
 <html lang="en">
     <head>
         <title>Basics</title>
+        <style>
+            h1{
+                color: blue;
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color:blue;">im learning git and im so psyched!!!</h1>
+        <h1>im learning git and im so psyched!!!</h1>
         <h2>editing from github platformm!</h2>
         Hello, World.
     </body>
